Fix CORS for Render frontend